Wrote skeletons for all supported functions in each of the allowed states.